Test  Add  new post page

--- a/TestAutomationWordPress/App.config
+++ b/TestAutomationWordPress/App.config
@@ -8,8 +8,9 @@
   </specFlow>
   <appSettings>
     <add key="WebURL" value="http://localhost:82/wordpress/wp-login.php" />
+    <add key="WebIndexURL" value="http://localhost:82/wordpress/index.php" />
     <add key="Browser" value="FF" />
     <add key="UserName" value="wimh0206" />
-    <add key="PassWord" value="test@12345" />
+    <add key="PassWord" value="kiss261990" />
   </appSettings>
 </configuration>
