--- a/TestAutomationWordPress/TestAutomationWordPress.csproj
+++ b/TestAutomationWordPress/TestAutomationWordPress.csproj
@@ -61,6 +61,12 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Hooks\BeforeScenarios.cs" />
+    <Compile Include="Hooks\Helpers\ScenarioHelpers.cs" />
+    <Compile Include="PageObjects\AddNewObjects.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AddNewObjects.resx</DependentUpon>
+    </Compile>
     <Compile Include="PageObjects\AdminHomePage.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -71,13 +77,29 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>LoginPageObjects.resx</DependentUpon>
     </Compile>
+    <Compile Include="PageObjects\MenuObjects.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MenuObjects.resx</DependentUpon>
+    </Compile>
+    <Compile Include="PageObjects\PostObjects.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PostObjects.resx</DependentUpon>
+    </Compile>
     <Compile Include="StepDefinitions\LoginFeaturesSteps.cs" />
+    <Compile Include="StepDefinitions\PostBlogSteps.cs" />
     <Compile Include="Tests\LoginFeatures.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>LoginFeatures.feature</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\PostBlog.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PostBlog.feature</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TestWordPressFramework\TestWordPressFramework.csproj">
@@ -92,8 +114,16 @@
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>LoginFeatures.feature.cs</LastGenOutput>
     </None>
+    <None Include="Tests\PostBlog.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>PostBlog.feature.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="PageObjects\AddNewObjects.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>AddNewObjects.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="PageObjects\AdminHomePage.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>AdminHomePage.Designer.cs</LastGenOutput>
@@ -101,6 +131,14 @@
     <EmbeddedResource Include="PageObjects\LoginPageObjects.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>LoginPageObjects.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PageObjects\MenuObjects.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>MenuObjects.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PageObjects\PostObjects.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>PostObjects.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <Choose>
